Fixing padding issues on mobile for Steps 3 and 4

--- a/software/css/software.css
+++ b/software/css/software.css
@@ -1687,6 +1687,15 @@ a.software-link-button {
   padding: 5px 25px;
 }
 
+@media (max-width: 790px) {
+  p.minheight100 {
+  min-height: 0px;
+  }
+  a.software-link-button {
+  margin-bottom:40px;
+  }
+}
+
 .fa-chevron-right.fa-inverse {
   color: #2B4D68;
   position: relative;
